<resources>
    <string name="app_name">Khoj</string>
    <string name="welcome_to_khoj">Protect your family from false information</string>
    <string name="logo">logo</string>
    <string name="next">next</string>
    <string name="use_khoj_to_fact_check">Learn to identify misinformation with Khoj</string>
    <string name="get_fake_news_list">Send us your messages and we\'ll verify them for you</string>
    <string name="welcome_to_khoj_intro">Khoj helps you protect your family from false information</string>
    <string name="hello">Hello</string>
    <string name="toolbar_greeting">Hello</string>
    <string name="namaste">नमस्ते</string>
    <string name="fact_check_rumors">We verify messages you receive on Whatsapp</string>
    <string name="try_it">Try it</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="More">more</string>
    <string name="offline">You are offline, please connect to internet and try again</string>
    <string name="error_occurred">We are encountering error in getting data, please try again in some time</string>
    <string name="loading_data">Working our magic, please wait…</string>
    <string name="refresh">refresh</string>
    <string name="beware_fake_news">Beware of These Rumours</string>
    <string name="share_family">Share with your family</string>
    <string name="choose_language">Please select your preferred language</string>
    <string name="choose_language_hin">कृपया अपनी पसंदीदा भाषा चुनें</string>
    <string name="hindi">हिन्दी</string>
    <string name="english">English</string>
    <string name="search_timeline">Your fake news search timeline</string>
    <string name="setting_up_eng">Setting up the application based on your preference, please wait…</string>
    <string name="setting_up_hin">हम आपकी पसंद के आधार पर एप्लिकेशन सेट कर रहे हैं, कृपया प्रतीक्षा करें…</string>
    <string name="error_try_later">Something went wrong, please try later</string>
    <string name="submit">SUBMIT</string>
    <string name="select_image_or_video">Select image or video</string>
    <string name="choose_screenshot">Choose from screenshots</string>
    <string name="or">OR</string>
    <string name="supporting_text">Write message</string>
    <string name="helper_text">Write any text here that will help us in our investigation</string>
    <string name="use_recently_copied_text">Use recently copied text</string>
    <string name="no_media_added">No media added to the message yet!</string>
    <string name="spread_the_word">Spread the word</string>
    <string name="happy_with_result">Are you happy with the result?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="please_select_a_screenshot">Please select a screenshot</string>
    <string name="sad">:(</string>
    <string name="no_screenshots">No screenshots found</string>
    <string name="screenshot_error">We ran into some error, please try later</string>
    <string name="responses_for_query">Responses for your query</string>
    <string name="read_more_here"><u>Read more here</u></string>
    <string name="media">Media</string>
    <string name="submitting_query">Submitting your query, please wait…</string>
    <string name="media_or_text">Either media or question is required</string>
    <string name="attach_media">Attach images and text that you want us to verify</string>
    <string name="no_queries_found">Looks like you haven\'t tried Khoj to submit a query yet</string>
    <string name="need_permission">We need your permission to access the images stored on your device to make your query more meaningful</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="choose_from_these">Or choose from these options</string>
    <string name="feedback_registered">Feedback registered</string>
    <string name="quick_links">Shortcuts</string>
    <string name="query_updates">Query updates</string>
    <string name="query_updates_desc">This channel gives updates about the queries you have posted</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="looking_into_request">Our team is looking into your request now. Please give us 3–5 business days to get back to you.</string>
</resources>