<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/page_margin"
    tools:context=".ui.home.morefragment.MoreFragment">

    <TextView
        android:id="@+id/tvChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_language"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/big_text"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChoose">

        <RadioButton
            android:id="@+id/rbEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/rbHindi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hindi" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPrivacyPolicy"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/top_margin"
        android:insetTop="@dimen/top_margin"
        android:insetBottom="@dimen/top_margin"
        android:letterSpacing="0"
        android:minHeight="0dp"
        android:text="@string/privacy_policy"
        android:textColor="@color/secondaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgLanguage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAboutUs"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/top_margin"
        android:insetTop="@dimen/top_margin"
        android:insetBottom="@dimen/top_margin"
        android:letterSpacing="0"
        android:minHeight="0dp"
        android:text="@string/about_us"
        android:textColor="@color/secondaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPrivacyPolicy" />

</androidx.constraintlayout.widget.ConstraintLayout>