<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/page_margin"
    tools:context=".ui.home.historyfragment.HistoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTimeline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvTimeline"
            style="@style/heading5TextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_timeline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTimeline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:paddingBottom="?attr/actionBarSize"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeline" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="@dimen/page_margin"
            app:layout_constraintBottom_toTopOf="@+id/tvLoading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvLoading"
            style="@style/body1TextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loading_data"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imgError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/page_margin"
            android:contentDescription="@string/history"
            app:layout_constraintBottom_toTopOf="@+id/tvError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvError"
            style="@style/body1TextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgRefresh"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/top_margin"
            android:contentDescription="@string/refresh"
            android:src="@drawable/ic_baseline_refresh_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvError" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNewMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:letterSpacing="0"
            android:paddingStart="@dimen/page_margin"
            android:paddingEnd="@dimen/page_margin"
            android:text="@string/try_it"
            android:textColor="@color/secondaryTextColor"
            android:textSize="20sp"
            app:backgroundTint="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvError" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>