<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvShare"
        style="@style/heading5TextPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/home"
        android:paddingStart="@dimen/top_margin"
        android:paddingEnd="@dimen/top_margin"
        android:text="@string/share_family"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/top_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginEnd="@dimen/top_margin"
        android:layout_marginBottom="@dimen/page_margin"
        app:cardElevation="@dimen/card_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/top_margin">

            <ImageView
                android:id="@+id/imgShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/home"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvShareHead"
                style="@style/heading6TextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:paddingStart="@dimen/top_margin"
                android:paddingEnd="@dimen/top_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgShare" />

            <TextView
                android:id="@+id/tvShareDescription"
                style="@style/body1TextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:paddingStart="@dimen/top_margin"
                android:paddingEnd="@dimen/top_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvShareHead" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNewsShare"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/top_margin"
                android:letterSpacing="0"
                android:text="@string/spread_the_word"
                android:textColor="@color/primaryColor"
                app:icon="@drawable/ic_share_primary"
                app:iconPadding="@dimen/page_margin"
                app:iconTint="@color/primaryColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvShareDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>